Diseñando el formulario de mantenimiento de productos

--- a/ventas/ventas/ventas.csproj
+++ b/ventas/ventas/ventas.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BL\CategoriaBL.cs" />
+    <Compile Include="BL\CiudadBL.cs" />
+    <Compile Include="BL\ClientesBL.cs" />
     <Compile Include="Categoria.cs" />
     <Compile Include="Ciudad.cs" />
     <Compile Include="Cliente.cs" />
@@ -78,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\ventas.BL.CategoriaBL.datasource" />
+    <None Include="Properties\DataSources\ventas.BL.CiudadBL.datasource" />
+    <None Include="Properties\DataSources\ventas.BL.ClientesBL.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
